[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-scheduler"
version = "0.1.0"
description = "Pipeline Scheduler MVP for creating retry schedules from retry plans in the RADAR Services utility chain."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "RADAR Services" }
]
dependencies = []

[project.scripts]
pipeline-scheduler = "pipeline_scheduler.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["pipeline_scheduler*"]
exclude = ["data*", "tests*", "outputs*"]
